--- a/pom.xml
+++ b/pom.xml
@@ -84,13 +84,13 @@
     <repository>
       <id>maven.huygens</id>
       <name>Huygens Maven Repository</name>
-      <url>scp://hi7.huygens.knaw.nl/data/htdocs/repository</url>
+      <url>${huygens-repo}</url>
     </repository>
     <!-- use the following if you ARE using a snapshot version. -->
     <snapshotRepository>
       <id>maven.huygens</id>
       <name>Huygens Maven Repository</name>
-      <url>scp://hi7.huygens.knaw.nl/data/htdocs/repository</url>
+      <url>${huygens-repo}</url>
       <uniqueVersion>false</uniqueVersion>
     </snapshotRepository>
   </distributionManagement>
